--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 type="text"
                 name="password"
                 id="pbkdf2-enc-password"
-                value=""
+                value="sean"
+                required
                 placeholder="Password"
               />
             </div>
@@ -76,20 +77,18 @@
                 type="number"
                 name="rounds"
                 id="pbkdf2-enc-rounds"
-                value="100"
+                value="100000"
                 min="0"
-                step="10"
+                step="100000"
                 placeholder="Rounds"
               />
             </div>
           </div>
           <div>
             <label for="pbkdf2-enc-data">Raw data</label>
-            <textarea
-              id="pbkdf2-enc-data"
-              name="data"
-              class="h-16 w-full"
-            ></textarea>
+            <textarea id="pbkdf2-enc-data" name="data" class="h-16 w-full">
+{}</textarea
+            >
           </div>
           <button
             type="submit"
@@ -129,11 +128,9 @@
           </div>
           <div>
             <label for="pbkdf2-dec-data">Encrypted input</label>
-            <textarea
-              id="pbkdf2-dec-data"
-              name="data"
-              class="h-12 w-full"
-            ></textarea>
+            <textarea id="pbkdf2-dec-data" name="data" class="h-16 w-full">
+{}</textarea
+            >
           </div>
           <div class="flex gap-2">
             <div class="flex w-full flex-col">
@@ -142,7 +139,7 @@
                 type="text"
                 name="password"
                 id="pbkdf2-dec-password"
-                value=""
+                value="sean"
                 placeholder="Password"
               />
             </div>
@@ -152,9 +149,9 @@
                 type="number"
                 name="rounds"
                 id="pbkdf2-dec-rounds"
-                value="100"
+                value="100000"
                 min="0"
-                step="10"
+                step="100000"
                 placeholder="Rounds"
               />
             </div>
