--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               />
             </div>
             <div class="flex flex-col">
-              <label for="maker-iterations">Iterations</label>
+              <label for="maker-iterations">PBKDF2 Iterations</label>
               <input
                 type="number"
                 id="maker-iterations"
@@ -70,7 +70,7 @@ Hello world</textarea
               class="rounded bg-blue-500 px-4 py-2 font-bold text-white hover:bg-blue-700 disabled:cursor-not-allowed disabled:bg-blue-300"
               id="maker-submit"
             >
-              Append data
+              Encrypt plaintext input
             </button>
             <button
               type="reset"
@@ -102,15 +102,14 @@ Hello world</textarea
             style="display: none"
           >
             <div class="pb-2">
-              <span>Raw Store -&nbsp;</span>
-              <span id="maker-raw-store-counter">0</span>
+              <span>Raw Store</span>
             </div>
             <code>
               <pre
                 id="maker-raw-store"
                 class="max-h-32 overflow-y-auto overflow-x-scroll"
               >
-[]</pre
+{}</pre
               >
             </code>
           </div>
@@ -182,7 +181,6 @@ Hello world</textarea
             <div class="flex justify-between pb-2">
               <div>
                 <span>Decrypted result -&nbsp;</span>
-                <span id="import-result-counter">0</span>
                 <span id="import-result-time">0s</span>
               </div>
               <button
