--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>PBKDF2 + AES256-GCM Stores</title>
   </head>
   <body class="mx-auto min-h-[100dvh] w-full max-w-7xl px-2 py-4">
-    <div id="app" class="pb-2"></div>
+    <div id="app" class="px-3.5 pb-2 sm:px-1"></div>
 
     <main
       class="grid grid-cols-1 gap-4 divide-y sm:grid-cols-2 sm:divide-x sm:divide-y-0"
